2009-06-09  Jaroslav Hajek  <highegg@gmail.com>

	* octave.cc (octave_main): Call initialize_command_input
	conditionally. Move line_editing update in front of it.
	Call command_editor::force_default_editor if not line_editing.

2009-06-09  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Flog2): Fix tests.

2009-06-08  John W. Eaton  <jwe@octave.org>

	* variables.cc (symbol_exist): Returnn 1 for function handles and
	inline function objects.

2009-06-08  Jaroslav Hajek  <highegg@gmail.com>

	* symtab.h (symbol_table::do_clear_global,
	symbol_table::do_clear_global_pattern): Properly erase from both local
	and global table.

2009-06-08  Jaroslav Hajek  <highegg@gmail.com>

	* variables.cc (Fclear): Clear also globals when called without
	arguments.

2009-06-07  Jaroslav Hajek  <highegg@gmail.com>

	* graphics.cc (color_property::do_set): Allow a wider range of types.

2009-06-07  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/find.cc (Ffind): Fix docs. Improve second argument
	handling. Add regression tests.

2009-06-06  Rik  <rdrider0-list@yahoo.com>

	* data.cc: Update documentation for 'complex' function

2009-06-06  Rik  <rdrider0-list@yahoo.com>

	* load-save.cc: Update documentation for NA and isna functions

2009-06-06  Rik  <rdrider0-list@yahoo.com>

	* load-save.cc: Update documentation for load and save

2009-06-06  Rik  <rdrider0-list@yahoo.com>

	* pr-output.cc: Update documentation for 'format'

2009-06-05  Rik  <rdrider0-list@yahoo.com>

	* variables.cc: Update documentation for 'who' family of functions

2009-06-03  Rik  <rdrider0-list@yahoo.com>

	* input.cc: Correct documentation for keyboard function

2009-06-02  Rob Mahurin  <rob@utk.edu>

	* Makefile.in: Add CARBON_LIBS to OCTINTERP_LINK_DEPS.
	From Bernard Desgraups <bdesgraupes@orange.fr>.
	
2009-06-02  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base.cc (octave_base_value::numeric_assign): Gripe when no index
	given.
	* ov-cell.cc (octave_cell::subsasgn): Ditto.