@@ -1,3 +1,9 @@
+2009-06-10  John W. Eaton  <jwe@octave.org>
+
+	* lex.l	(handle_identifier): Set lexer_flags.looking_for_object_index
+	false if identifier is a keyword.
+	({IDENT}{S}*): Don't set lexer_flags.looking_for_object_index here.
+
 2009-06-09  Jaroslav Hajek  <highegg@gmail.com>
 
 	* octave.cc (octave_main): Call initialize_command_input
